1.16.2 (2012-08-15)
- KyotoDbImpl now throws IOException on close() if DB is already closed (was IllegalStateException)
- Version number bumped so that first two digits match that of the compatible 'kyotocabinet-java' version.

1.0.1 (2012-08-10)
- First release from GitHub
- Open Sourced
- Check type of existing files
- Allow creation of file objects without creating physical files.

1.0.0 (2012-08-03)
- Initial commit