@@ -1,3 +1,8 @@
+TBC
+- Stricter checks for closed databases.
+- Provide hints for 'null' error message
+- Builder allows the creation and opening of a database in one step.
+
 1.16.2 (2012-08-15)
 - KyotoDbImpl now throws IOException on close() if DB is already closed (was IllegalStateException)
 - Version number bumped so that first two digits match that of the compatible 'kyotocabinet-java' version.
